--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,14 @@
 [phases.setup]
-nixPkgs = ['python311']
+nixPkgs = ['python311', 'python311Packages.pip']
 
 [phases.install]
-cmds = ['pip install -r requirements.txt']
+cmds = [
+  'python -m pip install --upgrade pip',
+  'pip install -r requirements.txt'
+]
 
 [phases.build]
 cmds = ['python manage.py collectstatic --noinput']
 
 [start]
-cmd = 'gunicorn school_project.wsgi:application --bind 0.0.0.0:${PORT:-8000}'
+cmd = 'sh start.sh'
