--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-# Django and core dependencies
-Django>=4.2.0,<5.0.0
-gunicorn>=20.1.0
-whitenoise>=6.0.0
-dj-database-url>=2.0.0
-psycopg2-binary>=2.9.0
-python-dotenv>=1.0.0
-django-cors-headers>=4.0.0
-djangorestframework>=3.14.0
-sqlparse>=0.5.0
-asgiref>=3.8.0
+Django==4.2.16
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+sqlparse==0.5.0
+asgiref==3.8.1
